Change placeholder text. Prevent the collapse window from resizing horizontally

--- a/TietoJar/TietoJar/ClientApp/src/app/marking-bar/marking-bar.component.scss
+++ b/TietoJar/TietoJar/ClientApp/src/app/marking-bar/marking-bar.component.scss
@@ -1,9 +1,10 @@
 .feedback {
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: 10vw;
   &-marking-bar {
     &-button {
+      height: 50px;
       width: 300px;
       padding: 0;
     }
@@ -17,4 +18,5 @@
 }
 .card {
   height: 30vh;
+  width: 300px;
 }
